@@ -1,0 +1,51 @@
+#include "nsISupports.idl"
+[scriptable, uuid(f728830e-1dd1-4444-6666-fb9f414f2465)]
+interface nsIScriptableGeckoMediaPlayerControls : nsISupports
+{
+	void play();
+	void pause();
+	void stop();
+};
+
+[scriptable, uuid(f728830f-1dd1-4444-6666-fb9f414f2465)]
+interface nsIScriptableGeckoMediaPlayer : nsISupports
+{
+	void Play();
+	void PlayAt(in double value);
+	void Pause();
+	void Stop();
+	void quit();
+	void DoPlay();
+	void DoPause();
+	void FastForward();
+	void FastReverse();
+	void ff();
+	void rew();
+	void rewind();
+	void Seek(in double value);
+	void Open(in string filename);
+	void SetVolume(in double value);
+	double GetVolume();
+	void SetFileName(in string filename);
+	void SetIsLooping(in boolean loop);
+	boolean GetIsLooping();
+	void SetAutoPlay(in boolean autoPlay);
+	boolean GetAutoPlay();
+	void SetHREF(in string url);
+	string GetHREF();
+	void SetURL(in string url);
+	string GetURL();
+	string GetMIMEType();
+	double getTime();
+	double getDuration();
+	double getPercent();
+	boolean isplaying();
+	void playlistAppend(in string item);
+	boolean playlistClear();
+	attribute string filename;
+	attribute boolean ShowControls;
+	attribute boolean fullscreen;
+	attribute boolean showlogo;
+	readonly attribute long playState;
+        readonly attribute nsIScriptableGeckoMediaPlayerControls controls;
+};
